<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf_adder</name>
  <version>0.0.5</version>
  <description>Package that publishes the map frame for a given Jackal robot running in Gazebo.</description>
  <maintainer email="jaal5534@colorado.edu">jaume</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
